--- a/assets/styles/scss/layout/_table.scss
+++ b/assets/styles/scss/layout/_table.scss
@@ -2,6 +2,12 @@
 *  _table.scss: This partial file contains default 'table' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 table {
   // ...
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
