--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -196,12 +196,6 @@ h3 + p::first-letter {
 /* -------------------------------------------------------------------------- *\
 -  Block Text Content
 \* -------------------------------------------------------------------------- */
-ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 p {
   color: var(--foreground-color);
   font-family: "Roboto", sans-serif;
@@ -218,13 +212,13 @@ p {
 -  Inline Text Semantics
 \* -------------------------------------------------------------------------- */
 a {
+  color: var(--primary-color);
   text-align: center;
   text-decoration: none;
-  color: var(--foreground-color);
 }
 
 a:hover {
-  color: var(--primary-color);
+  color: var(--secondary-color);
   text-decoration: underline;
 }
 
@@ -234,85 +228,6 @@ a:hover {
 /* -------------------------------------------------------------------------- *\
 *  _header.scss: This partial file contains all default 'header' styles.
 \* -------------------------------------------------------------------------- */
-.container {
-  padding: 0 15px;
-}
-
-@media (min-width: 0) {
-  .container {
-    max-width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .container::after {
-    display: block;
-    clear: both;
-    content: ' ';
-  }
-}
-
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .container::after {
-    display: block;
-    clear: both;
-    content: ' ';
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .container::after {
-    display: block;
-    clear: both;
-    content: ' ';
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .container::after {
-    display: block;
-    clear: both;
-    content: ' ';
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .container::after {
-    display: block;
-    clear: both;
-    content: ' ';
-  }
-}
-
-a {
-  color: rgba(34, 34, 34, 0.8);
-  text-decoration: none;
-}
-
-a:hover,
-a :focus {
-  color: black;
-}
-
 .menu-left a {
   position: relative;
   display: inline-block;
@@ -370,7 +285,6 @@ header {
   background: rgba(255, 255, 255, 0.92);
   -webkit-transform: translateY(0);
           transform: translateY(0);
-  transform: translateY(0);
   transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
   -webkit-transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
   transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s;
@@ -514,25 +428,17 @@ ul.menu-left.collapse {
   transition: all 0.25s;
 }
 
-.signature {
-  position: fixed;
-  bottom: 10px;
-  left: 0;
-  width: 100vw;
-  color: #000;
-  font-size: 10px;
-  font-weight: 100;
-  letter-spacing: 4px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
 /* -------------------------------------------------------------------------- *\
 *  _nav.scss: This partial file contains all default 'nav' styles.
 \* -------------------------------------------------------------------------- */
 nav {
   width: 100%;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -580,6 +486,11 @@ footer {
     max-width: calc(40rem - 0.1px);
     padding: 0.5rem;
   }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
+  }
 }
 
 @media (min-width: 40rem) {
@@ -599,12 +510,22 @@ footer {
     max-width: calc(80rem - 0.1px);
     padding: 1rem;
   }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
+  }
 }
 
 @media (min-width: 80rem) {
   .box-container {
     max-width: calc(100rem - 0.1px);
     padding: 1rem;
+  }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
   }
 }
 
@@ -613,17 +534,32 @@ footer {
     max-width: calc(120rem - 0.1px);
     padding: 1.5rem;
   }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
+  }
 }
 
 @media (min-width: 120rem) {
   .box-container {
     padding: 1.5rem;
   }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
+  }
 }
 
 @media (min-width: 140rem) {
   .box-container {
     padding: 2rem;
+  }
+  .box-container::after {
+    display: block;
+    clear: both;
+    content: ' ';
   }
 }
 
