--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -80,9 +80,6 @@ h3 {
 // #  <ol>
 
 // #  <ul>
-ul {
-  display: flex;
-}
 
 // #  <li>
 // li {
@@ -109,12 +106,12 @@ p {
 // #  <a>
 
 a {
+  color: $color--subject;
   text-align: center;
   text-decoration: none;
-  color: $color--text;
 
   &:hover {
-    color: $color--subject;
+    color: $color--section-title;
     text-decoration: underline;
   }
 }
