--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -2,6 +2,12 @@
 *  _article.scss: This partial file contains all default 'article' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 article {
   // ...
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
