--- a/assets/styles/scss/layout/_aside.scss
+++ b/assets/styles/scss/layout/_aside.scss
@@ -2,6 +2,12 @@
 *  _aside.scss: This partial file contains all default 'aside' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 aside {
   // ...
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
