--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -2,7 +2,13 @@
 *  _footer.scss: This partial file contains all default 'footer' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 footer {
   background-color: rgba(70, 130, 180, 0.5);
   // ...
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
