--- a/assets/styles/scss/layout/_forms.scss
+++ b/assets/styles/scss/layout/_forms.scss
@@ -2,6 +2,8 @@
 *  _forms.scss: This partial file contains all default 'forms' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 form {
   // ...
 }
@@ -49,3 +51,7 @@ datalist {
 output {
   // ...
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
