--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -110,6 +110,8 @@ a {
   text-align: center;
   text-decoration: none;
 
+  &
+
   &:hover {
     color: $color--section-title;
     text-decoration: underline;
