--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -110,7 +110,9 @@ a {
   text-align: center;
   text-decoration: none;
 
-  &
+  & i {
+    margin-left: $size--xs;
+  }
 
   &:hover {
     color: $color--section-title;
