style-main: header v15

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -42,7 +42,7 @@
 @import 'components/icon';
 @import 'components/card';
 @import 'components/switch';
-@import 'components/burger-menu';
+@import 'components/mobile-menu';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
