--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -15,7 +15,7 @@ svg {
   fill: $color--text;
 }
 
-.logo {
-  color: $color--text;
-  fill: $color--text;
-}
+// .logo {
+//   color: $color--text;
+//   fill: $color--text;
+// }
