--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -59,16 +59,11 @@ header {
   padding: 0.5rem 0;
   background: rgba(255, 255, 255, 0.92);
   transform: translateY(0);
-  transition: background 0.3s,
-    -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
-    background 0.3s;
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
-    background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
+  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s;
   will-change: transform;
 }
 
-header nav .logo {
+header nav .nav-logo {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   margin-right: 1rem;
@@ -79,7 +74,7 @@ header nav .logo {
   line-height: inherit;
 }
 
-header nav .logo::after {
+header nav .nav-logo::after {
   display: table;
   clear: both;
   content: '';
@@ -134,10 +129,6 @@ ul.menu-left {
   display: block;
   overflow: hidden;
   max-height: 0;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
