--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -60,3 +60,5 @@
 \* ========================================================================== */
 @import 'themes/light';
 @import 'themes/dark';
+
+// @import 'layout/hero';
