--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -18,13 +18,69 @@
 -  Section-1: Hero
 \* -------------------------------------------------------------------------- */
 
+// .hero {
+//   position: relative;
+//   min-height: 500px;
+//   padding-top: 110px;
+//   background-attachment: fixed;
+//   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
+//   background-position: center center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+
+//   &__container {
+//     align-items: center;
+//     justify-content: center;
+//     background-image:
+//       linear-gradient(45deg,
+//       $linear-gradient--red,
+//       $linear-gradient--orange,
+//       $linear-gradient--yellow);
+//   }
+
+//   &__visual {
+//     max-height: 25vh;
+//   }
+
+//   &__subject {
+//     // ...
+//   }
+
+//   &__title {
+//     // ...
+//   }
+// }
+
 .hero {
-  // ...
+  background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
+  background-position: center center;
+  background-size: cover;
 
   &__container {
-    background-color: hsla(120, 73%, 75%, 0.5);
+    display: flex;
+    height: 85vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(
+      45deg,
+      $linear-gradient--red,
+      $linear-gradient--orange,
+      $linear-gradient--yellow
+    );
   }
-  // ...
+
+  &__visual {
+    width: 50vw;
+  }
+
+  &__subject {
+    font-size: $font-size--5;
+  }
+
+  &__title {
+    font-size: $font-size--2;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
