--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -1,12 +1,16 @@
 /* -------------------------------------------------------------------------- *\
-*  _header.scss: This partial file contains all default 'header' styles.
+*  _layout.scss: This partial file contains all the default 'layout'.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
+/* -------------------------------------------------------------------------- *\
+-  Header
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
 
 // ...
 
-// -  <<----------<< Specific >>---------->>
+// #  <<<----------<< Specific >>---------->>
 
 .menu-left a {
   position: relative;
@@ -59,7 +63,8 @@ header {
   padding: 0.5rem 0;
   background: rgba(255, 255, 255, 0.92);
   transform: translateY(0);
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s;
+  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
+    background 0.3s;
   will-change: transform;
 }
 
@@ -189,3 +194,154 @@ ul.menu-left.collapse {
   background-color: #000;
   transition: all 0.25s;
 }
+
+/* -------------------------------------------------------------------------- *\
+-  Nav
+\* -------------------------------------------------------------------------- */
+
+// # <<----------<< Generic >>---------->>
+
+nav {
+  width: 100%;
+
+  & ul {
+    display: flex;
+
+    & li {
+      // display: inline-block // for vertical only
+    }
+  }
+}
+
+// #  <<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Aside
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+aside {
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Section
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+section {
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Article
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+article {
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Forms
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+form {
+  // ...
+}
+
+fieldset {
+  // ...
+}
+
+legend {
+  // ...
+}
+
+textarea {
+  // ...
+}
+
+label {
+  // ...
+}
+
+button {
+  // ...
+}
+
+input {
+  // ...
+}
+
+select {
+  // ...
+}
+
+optgroup {
+  // ...
+}
+
+option {
+  // ...
+}
+
+datalist {
+  // ...
+}
+
+output {
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Table
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+table {
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
+
+/* -------------------------------------------------------------------------- *\
+-  Footer
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< Generic >>---------->>
+
+footer {
+  background-color: rgba(70, 130, 180, 0.5);
+  // ...
+}
+
+// #  <<<----------<< Specific >>---------->>
+
+// ...
