--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -2,6 +2,10 @@
 *  _base.scss: This partial file contains the custom `base` HTML tags
 \* -------------------------------------------------------------------------- */
 
+/* -------------------------------------------------------------------------- *\
+-  Core
+\* -------------------------------------------------------------------------- */
+
 // #  *
 * {
   padding: 0;
@@ -10,7 +14,7 @@
 
 // #  <html>
 html {
-  font-size: calc(1rem + 0.25vw);
+  // font-size: calc(1rem + 0.25vw);
 }
 
 // #  <body>
@@ -24,3 +28,10 @@ body {
 }
 
 // #  <main>
+
+/* -------------------------------------------------------------------------- *\
+-  Media
+\* -------------------------------------------------------------------------- */
+
+
+
