--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -52,14 +52,16 @@
 // }
 
 .hero {
+  position: relative;
+  height: 100vh;
+  background-attachment: fixed;
   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
 
   &__container {
-    display: flex;
-    height: 85vh;
-    flex-direction: column;
+    height: 100%;
     align-items: center;
     justify-content: center;
     background-image: linear-gradient(
@@ -71,14 +73,15 @@
   }
 
   &__visual {
-    width: 50vw;
+    width: 50%;
+    height: auto;
   }
 
   &__subject {
-    font-size: $font-size--5;
+    // ...
   }
 
-  &__title {
+  &__sub-title {
     font-size: $font-size--2;
   }
 }
