--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -29,9 +29,18 @@ body {
 
 // #  <main>
 
-/* -------------------------------------------------------------------------- *\
--  Media
-\* -------------------------------------------------------------------------- */
+main {
+  // ...
+}
 
+// #  <div>
 
+div {
+  // ...
+}
 
+// #  <span>
+
+span {
+  // ...
+}
