--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -3,13 +3,42 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
--  Basics
+-  Svg
 \* -------------------------------------------------------------------------- */
 
-img,
+// -  <<----------<< General >>---------->>
+
 svg {
   width: 100%;
   height: auto;
   object-fit: cover;
   object-position: center center;
+  fill: $color--text;
+  color: $color--text;
 }
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
+
+.icon {
+  color: $color--text;
+  fill: $color--text;
+}
+
+/* -------------------------------------------------------------------------- *\
+-  Img
+\* -------------------------------------------------------------------------- */
+
+// -  <<----------<< General >>---------->>
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+}
+
+// -  <<----------<< Specific >>---------->>
+
+// ...
