--- a/assets/styles/scss/components/_box.scss
+++ b/assets/styles/scss/components/_box.scss
@@ -2,7 +2,7 @@
 *  _box.scss: This partial file contains all 'box' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
+// -  <<----------<< General >>---------->>
 
 .box-container {
   width: 95%;
