--- a/assets/styles/scss/components/_mobile-menu.scss
+++ b/assets/styles/scss/components/_mobile-menu.scss
@@ -2,7 +2,7 @@
 *  _burger-menu.scss: This partial file contains all 'burger-menu' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
+// -  <<----------<< General >>---------->>
 
 // ...
 
