--- a/assets/styles/scss/components/_switch.scss
+++ b/assets/styles/scss/components/_switch.scss
@@ -2,7 +2,7 @@
 *  _toggle.scss: This partial file contains all 'toggle' styles.
 \* -------------------------------------------------------------------------- */
 
-// -  <<----------<< Generic >>---------->>
+// -  <<----------<< General >>---------->>
 
 // ...
 
